...
    <string name="last_name">Last name</string>
    <string name="new_last_name">New last name</string>
    <string name="username">Username</string>
    <string name="username_field">Username</string>
    <string name="new_username">New username</string>
    <string name="musician">Musician</string>
    <string name="band">Band</string>
    <string name="event_manager">Event Manager</string>


    <!-- Pages -->
    <string name="map">Map</string>
    <string name="search">Search</string>
...
